fix(delete-modal): fixed delete modal alignment

--- a/src/views/Members/DeleteModal/deleteModal.module.scss
+++ b/src/views/Members/DeleteModal/deleteModal.module.scss
@@ -3,12 +3,13 @@
 
 .deleteModal {
   :global(.ant-modal .ant-modal-header) {
+    padding: 2.4rem 3.2rem 1.6rem 3.2rem;
+
     :global(.ant-modal-title) {
       color: $ashgro-navy;
       font-weight: 700;
       font-size: 2.2rem;
       padding-bottom: 0;
-      padding-left: 2rem;
     }
 
     :global(.ant-divider) {
@@ -16,14 +17,15 @@
     }
   }
   :global(.ant-modal .ant-modal-body) {
-    padding-top: 1.6rem;
     color: $ashgro-navy;
     opacity: 0.65;
+    padding: 0 3.2rem 2.4rem 3.2rem;
   }
   :global(.ant-modal .ant-modal-footer) {
     border-top: 1px solid $footer-light-border;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
+    margin-top: 0;
   }
 
   .footer {
@@ -43,4 +45,10 @@
       }
     }
   }
+}
+
+.modalDescription {
+  color: $modal-description-text;
+  font-weight: 400;
+  font-size: 1.6rem;
 }
